<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">
    <group android:checkableBehavior="single">
    <item
    android:id="@+id/nav_home"
    android:title="@string/home"
    android:icon="@drawable/ic_baseline_home_24"
    />
    <item
    android:id="@+id/nav_room"
    android:title="@string/available_room"
    android:icon="@drawable/room_icon"
    />
        <item
    android:id="@+id/nav_change_class"
    android:title="@string/change_class"
    android:icon="@drawable/ic_baseline_class_24"
    />
    <item
        android:id="@+id/nav_Gpa"
        android:title="@string/gpa_calculator"
        android:icon="@drawable/gpa_icon"
        />
    <item
        android:id="@+id/nav_Cgpa"
        android:title="@string/cgpa_calculator_text"
        android:icon="@drawable/cgpa_icon"
        />
        <item
            android:title = "@string/update_timetable"
            android:id="@+id/nav_updatefile"
            android:icon="@drawable/ic_baseline_update_24"
            />



    </group>


    <item android:title="@string/contact_us">
    <menu>
        <group android:checkableBehavior="single">
        <item
            android:title="@string/email"
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_baseline_mail_24"
            />
        </group>
    </menu>
    </item>

</menu>