<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20sp"
    android:orientation="vertical"
    android:background="@color/mint_green"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/room_no_view"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:background="@color/textviewback1"
            android:padding="20sp"
            android:text="@string/room_no"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/time_view"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/room_no_view"
            android:background="@color/textviewback1"
            android:padding="20sp"
            android:text="@string/time_dummy"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:background="@color/white"
        android:id="@+id/class_detail_view"
        android:layout_width="347dp"
        android:layout_height="104dp"
        android:layout_gravity="center"

        android:padding="10sp"
        android:text="@string/class_detail_dummy"
        android:textAlignment="center"
        android:textSize="20sp" />
    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/underline"
        />
</LinearLayout>